[api] Added better support for N level nested functions. Added complexModule. [dist] Bumped to latest version of Journey, updated API accordingly. [views] Started to add better support for N level nested functions. [generators] Started to create node.js api client generator. Started to stub out generators tests.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "./lib/webservice",
   "dependencies": {
     "eyes": ">= 0.1.6",
-    "journey": ">= 0.2.8",
+    "journey": "= 0.4.0-pre",
     "vows": ">= 0.5.2"
   },
   "scripts": { "test": "vows", "start": "server.js" },
