[dist] Added more devDeps, moved resourcer into node_modules folder

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "colors": ">= 0.5.0"
   },
   "devDependencies" : {
-    "vows": "0.5.x"
+    "vows": "0.5.x",
+    "request": "1.9.x"
   },
   "scripts": { "test": "vows", "start": "server.js" },
   "engines": { "node": ">= 0.4.0" }
