--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "keywords": ["webservice", "REST", "web-service", "JSON"],
   "main": "./lib/webservice",
   "dependencies": {
+    "resourcer": "= 0.1.0-pre"
     "journey": "= 0.4.0-pre",
     "colors": ">= 0.5.0"
   },
