--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webservice",
   "description": "turns modules into RESTFul web-services",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Marak Squires <marak.squires@gmail.com>",
   "repository": {
       "type": "git",
@@ -11,7 +11,8 @@
   "main": "./lib/webservice",
   "dependencies": {
     "journey": "= 0.4.0-pre",
-    "colors": ">= 0.5.0"
+    "colors": ">= 0.5.0",
+    
   },
   "devDependencies" : {
     "vows": "0.5.x",
