--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "main": "./lib/webservice",
   "dependencies": {
     "journey": "= 0.4.0-pre",
-    "colors": ">= 0.5.0",
-    
+    "colors": ">= 0.5.0"
   },
   "devDependencies" : {
     "vows": "0.5.x",
