--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "keywords": ["webservice", "REST", "web-service", "JSON"],
   "main": "./lib/webservice",
   "dependencies": {
-    "journey": "= 0.4.0-pre",
+    "journey": "= 0.4.0-pre-2",
+    "revalidator": ">= 0.1.0",
     "colors": ">= 0.5.0"
   },
   "devDependencies" : {
